--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 dataclasses-json==0.6.7
 distro==1.9.0
+dj-database-url==2.2.0
 Django==5.0.6
 djangorestframework==3.15.2
 frozenlist==1.4.1
