--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ distro==1.9.0
 dj-database-url==2.2.0
 Django==5.0.6
 djangorestframework==3.15.2
+faiss-cpu==1.8.0
 frozenlist==1.4.1
 gunicorn==22.0.0
 h11==0.14.0
@@ -38,11 +39,13 @@ pydantic_core==2.18.4
 PyPDF2==3.0.1
 python-decouple==3.8
 PyYAML==6.0.1
+regex==2024.5.15
 requests==2.32.3
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 sqlparse==0.5.0
 tenacity==8.4.1
+tiktoken==0.7.0
 tqdm==4.66.4
 typing-inspect==0.9.0
 typing_extensions==4.12.2
