--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.2.5
@@ -41,10 +42,13 @@ python-decouple==3.8
 PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
+scikit-learn==1.5.0
+scipy==1.14.0
 sniffio==1.3.1
 SQLAlchemy==2.0.31
 sqlparse==0.5.0
 tenacity==8.4.1
+threadpoolctl==3.5.0
 tiktoken==0.7.0
 tqdm==4.66.4
 typing-inspect==0.9.0
